<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@drawable/bg_login">-->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login">


        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/txtUserName"
            android:transitionName="logo"
            android:src="@drawable/ic_logo" />

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/txtPassword"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin"
        android:background="@drawable/edittext_login_background"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textNoSuggestions"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/txtUserName"
            android:layout_alignStart="@+id/txtUserName"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/edittext_login_background"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/txtPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_login"
            android:text="@string/Login_label"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center|right">

                <CheckBox
                    android:id="@+id/chkRemeberlogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center|right"
                    android:button="@drawable/login_checkbox"
                    android:text="    Nhớ đăng nhập"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center|left">

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center|right"
                    android:singleLine="true"
                    android:text="@string/forget_Login_label"
                    android:textColor="#fff"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
<!--</ScrollView>-->
